--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 publish_code
 deploy
-code/src/apps/RSIG3D/junk_build_dir.*
+code/src/apps/RSIG3D/*.o
+code/src/apps/RSIG3D/junk_build_dir/*
 code/src/libs/Dataset/test/testdata/CONC.ncf
 code/src/libs/Dataset/test/testdata/MET/METCRO3D
 code/src/libs/Dataset/test/master_hrrr_wind_2020-02-17_to_2020-02-18.xdr
